<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/edit_text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:hint="@string/notification_title"
            android:text="@string/notification_title" />

        <EditText
            android:id="@+id/edit_text_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:hint="@string/notification_description"
            android:text="@string/notification_description" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip" >

            <RadioButton
                android:id="@+id/notification_full"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification_mode_full" />

            <RadioButton
                android:id="@+id/notification_half"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification_mode_half" />

            <RadioButton
                android:id="@+id/notification_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/notification_mode_bar" />
        </RadioGroup>

        <Button
            android:id="@+id/btn_send_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:text="Send notification" />
    </LinearLayout>

</ScrollView>